# metriffic-cli

./: .gitmodules  CMakeLists.txt  admin_commands.cpp  admin_commands.hpp  app_context.cpp  app_context.hpp  authentication_commands.cpp  authentication_commands.hpp  context.cpp  context.hpp  generate_build_package.sh  gql_connection_manager.cpp  gql_connection_manager.hpp  key_generator.hpp  main.cpp  metriffic.cpp  query_commands.cpp  query_commands.hpp  session_commands.cpp  session_commands.hpp  session_manager.cpp  session_manager.hpp  settings_manager.cpp  settings_manager.hpp  ssh_manager.cpp  ssh_manager.hpp  utils.cpp  utils.hpp  workspace_commands.cpp  workspace_commands.hpp
